--- a/style.css
+++ b/style.css
@@ -4,8 +4,22 @@ body {
     font-family: "Overpass Mono", monospace;
     padding: 10px;
     margin: 20px;
-    ;
+    
 }
+
+nav{
+    background-color: bisque;
+    width: 25%; /* Ocupa el 25% del ancho */
+    height: 100vh; /* Ocupa toda la altura de la pantalla */
+    padding: 20px;
+}
+
+main{
+    background-color: rgb(90, 93, 92);
+    padding: 20px;
+}
+
+
 h1 {
     color: rgb(4, 217, 181);
     font-family: "Syne Mono", serif;
@@ -23,13 +37,18 @@ h2 {
     clear: both; /* Evita que el float afecte su posición */
 }
 
-ul{
-    padding: 0px;
-}
+
 h3 {
     color: rgb(250, 235, 215);
     font-style: oblique;
 }
+
+ul{
+    padding: 0px;
+    list-style: none;
+
+}
+
 
 a:any-link{ /* Se tiene que hacer lo mismo tres veces any-link, moz-any-link y webkit-any-lin para que sea compatible con todos los navegadores*/
     color: rgb(110, 130, 142);
@@ -59,6 +78,7 @@ li:hover{
     font-style: normal;
 }
 
+
 .hastag {
     color: rgb(143, 187, 189);
     font-style: oblique;
@@ -81,18 +101,16 @@ li:hover{
     text-align: center;
 }
 
-#listaRedesSociales{
-    list-style: none;
-}
 
-#listaRedesSociales li>a {
+
+#listaRedesSociales li a {
     display: flex;
     align-items: center; /* Alinea la imagen y el texto verticalmente */
     gap: 10px; /* Espacio entre la imagen y el texto */
     margin-bottom: 10px; /* Espacio entre elementos de la lista */
 }
 
-#sobremi {
+#nombrecabezera {
     border-bottom: 1px solid rgb(143, 187, 189);
 }
 
